Log4j2 methods don't accept both exception and formatter list